commit translated contents

--- a/docs/visual-basic/misc/bc30072.md
+++ b/docs/visual-basic/misc/bc30072.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30072
 ms.assetid: da808bc3-f154-444a-b547-3cf55beff8a9
-ms.openlocfilehash: 2dd126214ec6091591cb26de6168643fe7f32489
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 692804b2236e1de84703dbf6b490a765249ba073
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622202"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381134"
 ---
 # <a name="case-can-only-appear-inside-a-select-case-statement"></a>'Case' può trovarsi solo all'interno di un'istruzione 'Select Case'
 Un'istruzione `Case` si verifica al di fuori di un blocco `Select` . Un'istruzione `Case` può essere usata solo tra un'istruzione `Select` o `Select Case` e l'istruzione `End Select` corrispondente.  
@@ -25,4 +25,4 @@ Un'istruzione `Case` si verifica al di fuori di un blocco `Select` . Un'istruzio
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
