--- a/docs/visual-basic/misc/bc32201.md
+++ b/docs/visual-basic/misc/bc32201.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32201
 ms.assetid: ea720bc3-51e8-45fb-874c-f8cec9a250ad
-ms.openlocfilehash: 5639e3206b8340ce6dd22c47e41b83d6302ebf7a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d9ba5632859dd51abe2bb78a2ca16ffd796a8856
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64651257"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379835"
 ---
 # <a name="property-parameters-cannot-have-the-name-value"></a>I parametri di proprietà non possono avere il nome 'Value'
 Un parametro in un'istruzione `Property` è denominato `Value`. Questo nome è riservato all'interno di una definizione di proprietà per il nuovo valore assegnato alla proprietà nella routine `Set` .  
@@ -25,5 +25,5 @@ Un parametro in un'istruzione `Property` è denominato `Value`. Questo nome è r
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Set](../../visual-basic/language-reference/statements/set-statement.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Istruzione set](../language-reference/statements/set-statement.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
