--- a/docs/visual-basic/misc/bc32203.md
+++ b/docs/visual-basic/misc/bc32203.md
@@ -1,5 +1,5 @@
 ---
-title: "'<method1>' non può eseguire<method2>l'override di '' perché espande l'accesso del metodo di base"
+title: "' <method1> ' non può eseguire l'override <method2> di '' perché espande l'accesso del metodo di base"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32203
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32203
 ms.assetid: ef7816a4-5f57-4346-80fc-9311bc150b6b
-ms.openlocfilehash: bae7df1b56fe28e8bb1b3b70ed176eed4e8381da
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f2297b8cda149400df2dc69f207aaa74820cf4d5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667487"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379705"
 ---
-# <a name="method1-cannot-override-method2-because-it-expands-the-access-of-the-base-method"></a>'\<Method1 >' non può eseguire\<l'override di ' Method2 >' perché espande l'accesso del metodo di base
+# <a name="method1-cannot-override-method2-because-it-expands-the-access-of-the-base-method"></a>' \<method1> ' non può eseguire l'override \<method2> di '' perché espande l'accesso del metodo di base
 Una routine specifica `Overrides` , ma dichiara un'accessibilità meno restrittiva di quella del metodo da sottoporre a override. Non è possibile espandere l'accessibilità, in altre parole non è possibile rendere il metodo di override più accessibile rispetto al metodo sottoposto a override. Ad esempio, se il metodo della classe base è `Protected`, è possibile eseguirne l'override con un metodo `Public` .  
   
  **ID errore:** BC32203  
@@ -26,5 +26,5 @@ Una routine specifica `Overrides` , ma dichiara un'accessibilità meno restritti
 ## <a name="see-also"></a>Vedere anche
 
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [Livelli di accesso in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md)
-- [Shadowing in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
+- [Livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md)
+- [Shadowing in Visual Basic](../programming-guide/language-features/declared-elements/shadowing.md)
