--- a/docs/visual-basic/misc/bc33002.md
+++ b/docs/visual-basic/misc/bc33002.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC33002
 ms.assetid: 8628ea42-57d8-41ca-8bdc-5e4c27be543e
-ms.openlocfilehash: c16956fabe86e4f7f34e272619c2dd0815540d78
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8da1e6687829a97bd094484eff6b424b3395b88e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61802856"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385587"
 ---
 # <a name="operator-is-not-overloadable"></a>L'operatore non supporta l'overload
 Solo determinati operatori sono idonei per l'overload. La tabella seguente elenca gli operatori che è possibile definire.  
   
-|Tipo|Operatori|  
+|Type|Operatori|  
 |----------|---------------|  
-|Unario|`+`, `-`, `IsFalse`, `IsTrue`, `Not`|  
+|Unaria|`+`, `-`, `IsFalse`, `IsTrue`, `Not`|  
 |Binario|`+`, `-`, `*`, `/`, `\`, `&`, `^`, `>>`, `<<`, `=`, `<>`, `>`, `>=`, `<`, `<=`, `And`, `Like`, `Mod`, `Or`, `Xor`|  
 |Conversione (unario)|`CType`|  
   
@@ -35,8 +35,8 @@ Solo determinati operatori sono idonei per l'overload. La tabella seguente elenc
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
