--- a/docs/visual-basic/misc/bc33038.md
+++ b/docs/visual-basic/misc/bc33038.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo '<typename>'deve definire l'operatore'<operator>' da usare in un'istruzione 'For'
+title: Il tipo '<typename>' deve definire l'operatore '<operator>' per poter essere usato in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33038
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33038
 ms.assetid: b1c9d87f-80f9-4c8c-8908-f8400b9fe4c5
-ms.openlocfilehash: 735dce0277be94c4819eac6e1710848125393c75
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 36c220fb7cf8f648cb08bab189f0541469087dc6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626573"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379627"
 ---
-# <a name="type-typename-must-define-operator-operator-to-be-used-in-a-for-statement"></a>Tipo '\<nomeTipo >' deve definire l'operatore '\<operatore >' da usare in un'istruzione 'For'
+# <a name="type-typename-must-define-operator-operator-to-be-used-in-a-for-statement"></a>Il tipo '\<typename>' deve definire l'operatore '\<operator>' per poter essere usato in un'istruzione 'For'
 Un ciclo `For` specifica una variabile contatore di un tipo che non supporta un operatore richiesto.  
   
  La variabile contatore in un ciclo `For` può essere di un qualsiasi tipo di dati che supporti tutti gli operatori elencati di seguito:  
@@ -43,9 +43,9 @@ Un ciclo `For` specifica una variabile contatore di un tipo che non supporta un 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [Funzione CType](../../visual-basic/language-reference/functions/ctype-function.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [CType Function](../language-reference/functions/ctype-function.md)
