--- a/docs/visual-basic/misc/bc36005.md
+++ b/docs/visual-basic/misc/bc36005.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36005
 ms.assetid: bcebae85-b438-4839-bada-2f8f8dcc8a86
-ms.openlocfilehash: ba99af5f09dcea4f04ac020ea10d0a719193daf4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: d38cd695bbfdc17ac2fbce67b46248ac408fbd5d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770075"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379251"
 ---
 # <a name="elseif-must-be-preceded-by-a-matching-if-or-elseif"></a>'ElseIf' deve essere preceduto da un 'If' o 'ElseIf' corrispondente
 Un'istruzione `ElseIf` si verifica senza un'istruzione `If` corrispondente. `ElseIf` deve essere preceduto da un'istruzione `If` o da un'altra istruzione `ElseIf` .  
@@ -29,5 +29,5 @@ Un'istruzione `ElseIf` si verifica senza un'istruzione `If` corrispondente. `Els
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione If...Then...Else](../../visual-basic/language-reference/statements/if-then-else-statement.md)
-- [Strutture decisionali](../../visual-basic/programming-guide/language-features/control-flow/decision-structures.md)
+- [Istruzione If...Then...Else](../language-reference/statements/if-then-else-statement.md)
+- [Strutture decisionali](../programming-guide/language-features/control-flow/decision-structures.md)
