--- a/docs/visual-basic/misc/bc36551.md
+++ b/docs/visual-basic/misc/bc36551.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36551
 ms.assetid: c832d523-5bf6-4baf-b91c-bd26d94453ed
-ms.openlocfilehash: 91847d40bfd44c79331ef0a9a29ee4ad8c50f7b9
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: d9a214ae82ccb0585b7cd14404e091211df45402
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353577"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378549"
 ---
 # <a name="extension-methods-can-be-defined-only-in-modules"></a>I metodi di estensione possono essere definiti solo nei moduli
 Questo errore si verifica quando un metodo di estensione è stato definito all'esterno di un modulo. In Visual Basic, tutti i metodi di estensione devono essere definiti all'interno di moduli standard.  
@@ -42,6 +42,6 @@ End Namespace
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Modulo \<parola chiave>](../../visual-basic/language-reference/modifiers/module-keyword.md)
-- [Istruzione Module](../../visual-basic/language-reference/statements/module-statement.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Modulo\<keyword>](../language-reference/modifiers/module-keyword.md)
+- [Istruzione Module](../language-reference/statements/module-statement.md)
