--- a/docs/visual-basic/misc/bc36552.md
+++ b/docs/visual-basic/misc/bc36552.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36552
 ms.assetid: a8cc8cdd-cdb5-42ca-b5a1-c9a71abd46eb
-ms.openlocfilehash: 96b57f30368ccc7eb78c3be5fd108c97bda5affb
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: a5a6ab0292a40f51ac4dd092f3c8ed8dbc9abcab
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71353536"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378471"
 ---
 # <a name="extension-methods-must-declare-at-least-one-parameter"></a>I metodi di estensione devono dichiarare almeno un parametro
 I metodi di estensione devono dichiarare almeno un parametro. Il primo parametro specifica il tipo da estendere.  
@@ -44,6 +44,6 @@ greeting.Print()
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
-- [Routine](../../visual-basic/programming-guide/language-features/procedures/index.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Procedure](../programming-guide/language-features/procedures/index.md)
