--- a/docs/visual-basic/misc/bc36567.md
+++ b/docs/visual-basic/misc/bc36567.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro '<parametername>' ha già un argomento corrispondente
+title: Il parametro '<parametername>' ha già un argomento corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36567
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36567
 ms.assetid: f01fc8d8-924a-4492-add1-db06604edcbf
-ms.openlocfilehash: d409de2127d6a5d1c2d44791ae82ad7af007c8a4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ec6f4d708a9ccf533bb1e6cf44d1e2e5759a5f10
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64582741"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378068"
 ---
-# <a name="parameter-parametername-already-has-a-matching-argument"></a>Parametro '\<nomeparametro >' ha già un argomento corrispondente
+# <a name="parameter-parametername-already-has-a-matching-argument"></a>Il parametro '\<parametername>' ha già un argomento corrispondente
 Un argomento viene passato in base al nome più di una volta nella stessa chiamata di routine.  
   
  **ID errore:** BC36567  
@@ -27,4 +27,4 @@ Un argomento viene passato in base al nome più di una volta nella stessa chiama
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
