--- a/docs/visual-basic/misc/bc36808.md
+++ b/docs/visual-basic/misc/bc36808.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36808
 ms.assetid: 76b2605c-3d9b-4e56-ba3f-99c60c668290
-ms.openlocfilehash: 65d5dd1cbcf025866037ddf59a54b0ebae2d36d6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: b4bc65f8f89b2f9900e837226b34e4e1c2949ca8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663088"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369413"
 ---
 # <a name="xml-attributes-cannot-be-selected-from-type-type"></a>Impossibile selezionare attributi XML dal tipo 'type'
-È stato fatto riferimento a un attributo XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement> o `IEnumerable(Of XElement)`. Per altre informazioni, vedere [XML Attribute Axis Property](../../visual-basic/language-reference/xml-axis/xml-attribute-axis-property.md).  
+È stato fatto riferimento a un attributo XML per un oggetto che non è di tipo <xref:System.Xml.Linq.XElement> o `IEnumerable(Of XElement)`. Per altre informazioni, vedere [XML Attribute Axis Property](../language-reference/xml-axis/xml-attribute-axis-property.md).  
   
 ```vb  
 ' Generates an error.  
@@ -26,7 +26,7 @@ Dim var = "sample text".@attr
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Se si fa riferimento a un attributo di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement> o `IEnumerable(Of XElement)`. Di seguito è riportato un esempio:  
+- Se si fa riferimento a un attributo di un oggetto, quest'ultimo deve essere fortemente tipizzato come <xref:System.Xml.Linq.XElement> o `IEnumerable(Of XElement)`. Di seguito è illustrato un esempio:  
   
 ```vb  
 Dim elem As XElement = <root attr="value"/>  
@@ -35,6 +35,6 @@ Dim var = elem.@attr
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Proprietà axis dell'attributo XML](../../visual-basic/language-reference/xml-axis/xml-attribute-axis-property.md)
-- [Proprietà Axis XML](../../visual-basic/language-reference/xml-axis/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [XML Attribute Axis Property](../language-reference/xml-axis/xml-attribute-axis-property.md)
+- [Proprietà Axis XML](../language-reference/xml-axis/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
