--- a/docs/visual-basic/misc/bc40005.md
+++ b/docs/visual-basic/misc/bc40005.md
@@ -1,5 +1,5 @@
 ---
-title: <type>'<typename>' ombreggia un metodo sottoponibile a override nella classe di base
+title: <type>' <typename> ' ombreggia un metodo sottoponibile a override nella classe di base
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40005
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC40005
 ms.assetid: 1dadda7f-1d26-4ae8-a668-9f69d55ceb50
-ms.openlocfilehash: 553f241ddb6eb55ae1a3f82eaa8ef815f25f008b
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: df8c505860d774883f216f82e099c55b01fbffc9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660298"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369141"
 ---
-# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a>\<il tipo >\<' typeName >' ombreggia un metodo sottoponibile a override nella classe di base
-\<il tipo >\<' typeName >' ombreggia un metodo sottoponibile a override nella classe di base. Per eseguire l'override del metodo di base, quest'ultimo deve essere dichiarato 'Overrides'.  
+# <a name="type-typename-shadows-an-overridable-method-in-the-base-class"></a>\<type>' \<typename> ' ombreggia un metodo sottoponibile a override nella classe di base
+\<type>' \<typename> ' nasconde un metodo sottoponibile a override nella classe di base. Per eseguire l'override del metodo di base, quest'ultimo deve essere dichiarato 'Overrides'.  
   
  Un elemento di programmazione è dichiarato con lo stesso nome di una proprietà o di una routine sottoponibile a override definita nella classe base. In questa situazione l'elemento in questa classe deve nascondere l'elemento della classe base.  
   
@@ -34,6 +34,6 @@ ms.locfileid: "69660298"
 ## <a name="see-also"></a>Vedere anche
 
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
-- [Shadowing in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/shadowing.md)
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
+- [Shadowing in Visual Basic](../programming-guide/language-features/declared-elements/shadowing.md)
+- [Override](../language-reference/modifiers/overrides.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
