--- a/docs/visual-basic/misc/bc30039.md
+++ b/docs/visual-basic/misc/bc30039.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30039
 ms.assetid: 63846449-b1df-4626-bf99-36fa9b187799
-ms.openlocfilehash: 16e920baa74b9eb0bba9e9fd46bbaca133aba555
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d7e0b4f7cc25971de462c335ab88e0a46b74ed40
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606317"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381913"
 ---
 # <a name="loop-control-variable-cannot-be-a-property-or-a-late-bound-indexed-array"></a>La variabile di controllo del ciclo non può essere una proprietà o una matrice indicizzata per cui è prevista l'associazione tardiva
 La variabile usata per eseguire l'iterazione in un ciclo `For` deve essere di un tipo di dati numerico.  
@@ -25,4 +25,4 @@ La variabile usata per eseguire l'iterazione in un ciclo `For` deve essere di un
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
