--- a/docs/visual-basic/misc/bc30041.md
+++ b/docs/visual-basic/misc/bc30041.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30041
 ms.assetid: 989d0477-106f-4cc4-b097-ee32ca70ca59
-ms.openlocfilehash: ae3ae01d3f70af26a45251c6e9751476bd197ad9
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 47f3e5b57f2f5484aca358da25b8a450dd9e101b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64625924"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381575"
 ---
 # <a name="maximum-number-of-errors-has-been-exceeded"></a>È stato superato il numero massimo di errori consentiti
 Il numero massimo di errori di compilazione è 100. Il compilatore impone questo limite per ridurre le dimensioni dei report di errore.  
@@ -25,5 +25,5 @@ Il numero massimo di errori di compilazione è 100. Il compilatore impone questo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Compilatore della riga di comando di Visual Basic](../../visual-basic/reference/command-line-compiler/index.md)
+- [Compilatore della riga di comando di Visual Basic](../reference/command-line-compiler/index.md)
 - [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)
