--- a/docs/visual-basic/misc/bc30064.md
+++ b/docs/visual-basic/misc/bc30064.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30064
 ms.assetid: 17e0751d-4c22-40b2-bb07-cb5c845dbc30
-ms.openlocfilehash: 46ca53768d7e694d4dae921f52f997b18ea645d2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d995801e56b00b9e8a7986aeb95559e82c46bef4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622491"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381433"
 ---
 # <a name="readonly-variable-cannot-be-the-target-of-an-assignment"></a>La variabile 'ReadOnly' non può essere la destinazione di un'assegnazione
 Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore. Solo alle variabili, alle proprietà e agli elementi di matrice scrivibili è possibile assegnare valori durante l'esecuzione.  
@@ -25,5 +25,5 @@ Una proprietà `ReadOnly` si trova in un contesto che le assegna un valore. Solo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ReadOnly](../../visual-basic/language-reference/modifiers/readonly.md)
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
+- [ReadOnly](../language-reference/modifiers/readonly.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
