--- a/docs/visual-basic/misc/bc30067.md
+++ b/docs/visual-basic/misc/bc30067.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30067
 ms.assetid: 207fef65-4383-4120-9e5a-e0e14d168a72
-ms.openlocfilehash: 68594bb4c09bfb161619821b8c7e9268ab28f43b
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 6e1a658e98423cc01622848c31342307e2f77286
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622230"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381264"
 ---
 # <a name="exit-function-is-not-valid-in-a-sub-or-property"></a>'Exit Function' non è valido in Sub o Property
 `Exit Function` viene visualizzato in una routine `Sub` o `Property` . Un'istruzione `Exit` deve corrispondere al blocco in cui è inclusa.  
@@ -25,6 +25,6 @@ ms.locfileid: "64622230"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Sub](../../visual-basic/programming-guide/language-features/procedures/sub-procedures.md)
-- [Routine Function](../../visual-basic/programming-guide/language-features/procedures/function-procedures.md)
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Sub](../programming-guide/language-features/procedures/sub-procedures.md)
+- [Routine Function](../programming-guide/language-features/procedures/function-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
