--- a/docs/visual-basic/misc/bc30069.md
+++ b/docs/visual-basic/misc/bc30069.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di controllo ciclo for '<variablename>' già in uso da un ciclo For di inclusione
+title: Variabile '<variablename>' di controllo del ciclo 'For' già in uso da un ciclo 'For' di inclusione
 ms.date: 07/20/2015
 f1_keywords:
 - bc30069
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30069
 ms.assetid: e12c8cd5-55ad-4d10-8a3b-7b27f3716c8c
-ms.openlocfilehash: 457f50f860a1a60c6197d6973cfe171e6f7d7b96
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: fb4461b3673dceecf778e5532c002f3623029602
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622402"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381313"
 ---
-# <a name="for-loop-control-variable-variablename-already-in-use-by-an-enclosing-for-loop"></a>Variabile di controllo ciclo for '\<nomevariabile >' già in uso da un ciclo For di inclusione
+# <a name="for-loop-control-variable-variablename-already-in-use-by-an-enclosing-for-loop"></a>Variabile '\<variablename>' di controllo del ciclo 'For' già in uso da un ciclo 'For' di inclusione
 Tutti i cicli annidati `For` devono usare variabili di controllo univoche.  
   
  **ID errore:** BC30069  
@@ -25,4 +25,4 @@ Tutti i cicli annidati `For` devono usare variabili di controllo univoche.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
