--- a/docs/visual-basic/misc/bc30075.md
+++ b/docs/visual-basic/misc/bc30075.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30075
 ms.assetid: a25025c9-0763-4c19-9e9b-cffb9aacaa8a
-ms.openlocfilehash: 67d16ac7ee8c1d906acbfed8bf89074c27f6cf4e
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2b0c69261cc81b14216cc39926d6cbaac26e2ae7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69658691"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380835"
 ---
 # <a name="named-arguments-are-not-valid-as-array-subscripts"></a>Gli argomenti denominati non sono validi come indici di matrice
 Un indice di matrice viene specificato usando la sintassi per passare un argomento di routine in base al nome, ad esempio `Array(Index := 10)`. Questa sintassi non è valida per gli indici di matrice.  
@@ -26,4 +26,4 @@ Un indice di matrice viene specificato usando la sintassi per passare un argomen
 ## <a name="see-also"></a>Vedere anche
 
 - [Matrici in Visual Basic](../programming-guide/language-features/arrays/index.md)
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
