--- a/docs/visual-basic/misc/bc30081.md
+++ b/docs/visual-basic/misc/bc30081.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30081
 ms.assetid: e5905d59-56bb-4daf-aca5-5ff847fc62f6
-ms.openlocfilehash: 53fbae8b30b00823eed42ca6ff43b79cbe879e4b
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 4c0451f7f50b9dc370d6a70003a5bf4edfa595e8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935993"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380744"
 ---
 # <a name="if-must-end-with-a-matching-end-if"></a>'If' deve terminare con un oggetto 'End If' corrispondente
 Un'istruzione `If` si verifica senza un'istruzione `End If` corrispondente. Deve essere usata un'istruzione `End If` per terminare il blocco `If` .  
@@ -27,4 +27,4 @@ Un'istruzione `If` si verifica senza un'istruzione `End If` corrispondente. Deve
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione If...Then...Else](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [Istruzione If...Then...Else](../language-reference/statements/if-then-else-statement.md)
