--- a/docs/visual-basic/misc/bc30085.md
+++ b/docs/visual-basic/misc/bc30085.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30085
 ms.assetid: aa88f4d0-be5f-4efe-a4ef-80e6d6124e6e
-ms.openlocfilehash: 19229fff6cf0d786fa7912ef6a30d3f38ec54ca4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 44ae7da97daba3768b301bae94d2bf169d719a65
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622208"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380562"
 ---
 # <a name="with-must-end-with-a-matching-end-with"></a>'With' deve terminare con un oggetto 'End With' corrispondente
 Un'istruzione `With` si verifica senza un'istruzione `End With` corrispondente. Deve essere usata un'istruzione `End With` per terminare il blocco `With` .  
@@ -27,4 +27,4 @@ Un'istruzione `With` si verifica senza un'istruzione `End With` corrispondente. 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione With...End With](../../visual-basic/language-reference/statements/with-end-with-statement.md)
+- [Istruzione With...End With](../language-reference/statements/with-end-with-statement.md)
