--- a/docs/visual-basic/misc/bc30088.md
+++ b/docs/visual-basic/misc/bc30088.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30088
 ms.assetid: 9de8c0d4-4ce9-45cf-98d6-8f68bba507a5
-ms.openlocfilehash: 6e0a7dbafcc4362c89d037bf1208ff251e555daf
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 1a6574a88755e54841549d28ec88912e589c866e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935902"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380484"
 ---
 # <a name="end-select-must-be-preceded-by-a-matching-select-case"></a>'End Select' deve essere preceduto da un 'Select Case' corrispondente
 Un'istruzione `End Select` si verifica senza un'istruzione `Select` o `Select Case` corrispondente. `End Select` deve essere preceduto da un'istruzione `Select` o `Select Case` .  
@@ -29,4 +29,4 @@ Un'istruzione `End Select` si verifica senza un'istruzione `Select` o `Select Ca
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
