--- a/docs/visual-basic/misc/bc30092.md
+++ b/docs/visual-basic/misc/bc30092.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30092
 ms.assetid: 4bf49bb2-c69b-443d-aa58-cb40fcfb1370
-ms.openlocfilehash: 3ffe4bfbf6bab9529c9ad4e60d183acf43d64f88
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: f90eacc5cb96c275224003b2228f09f0211ec7fb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935863"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370492"
 ---
 # <a name="next-must-be-preceded-by-a-matching-for"></a>'Next' deve essere preceduto da un oggetto 'For' corrispondente
 Un'istruzione `Next` si verifica senza un'istruzione `For` o `For Each` corrispondente. `Next` deve essere preceduto da un'istruzione `For` o `For Each` corrispondente.  
@@ -29,5 +29,5 @@ Un'istruzione `Next` si verifica senza un'istruzione `For` o `For Each` corrispo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Istruzione For Each...Next](../../visual-basic/language-reference/statements/for-each-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Istruzione For Each...Next](../language-reference/statements/for-each-next-statement.md)
