--- a/docs/visual-basic/misc/bc30094.md
+++ b/docs/visual-basic/misc/bc30094.md
@@ -1,5 +1,5 @@
 ---
-title: Etichetta '<labelname>' è già definito nell'espressione lambda su più righe metodo corrente
+title: L'etichetta '<labelname>' è già definita nel metodo o nell'espressione lambda su più righe corrente
 ms.date: 07/20/2015
 f1_keywords:
 - bc30094
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30094
 ms.assetid: e3771a22-1205-41ab-8e64-12ef679cb376
-ms.openlocfilehash: 412d975f3d4f0f9f4f0d6cf4adf5e66935de9338
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 534550c4a2a71e98df25d5b6a60ee8cbe0ae593f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935824"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370375"
 ---
-# <a name="label-labelname-is-already-defined-in-the-current-methodmultiline-lambda"></a>Etichetta '\<NomeEtichetta >' è già definito nell'espressione lambda (metodo) o su più righe corrente
+# <a name="label-labelname-is-already-defined-in-the-current-methodmultiline-lambda"></a>L'etichetta ' \<labelname> ' è già definita nel metodo o nell'espressione lambda su più righe corrente
 Il nome dell'etichetta viene duplicato all'interno della routine. Tutti i nomi all'interno di una routine devono essere univoci.  
   
  **ID errore:** BC30094  
@@ -25,5 +25,5 @@ Il nome dell'etichetta viene duplicato all'interno della routine. Tutti i nomi a
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [Procedura: etichettare le istruzioni](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Procedura: Etichettare le istruzioni](../programming-guide/program-structure/how-to-label-statements.md)
