--- a/docs/visual-basic/misc/bc30105.md
+++ b/docs/visual-basic/misc/bc30105.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30105
 ms.assetid: 6074acee-7ffd-447e-ab67-4f927f831d80
-ms.openlocfilehash: be02bcddf0a6b51c79f0a739641dfc64390e5978
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3eff6f8412b99a53a3fc90ed5c94cc19bcda733a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64642694"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380380"
 ---
 # <a name="number-of-indices-is-less-than-the-number-of-dimensions-of-the-indexed-array"></a>Il numero di indici è inferiore al numero di dimensioni della matrice indicizzata
 Il numero di indici usati per accedere a un elemento di matrice deve essere esattamente uguale all'ordine di priorità della matrice, vale a dire al numero di dimensioni dichiarate per la matrice.  
@@ -25,4 +25,4 @@ Il numero di indici usati per accedere a un elemento di matrice deve essere esat
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Matrici](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [Matrici](../programming-guide/language-features/arrays/index.md)
