--- a/docs/visual-basic/misc/bc30126.md
+++ b/docs/visual-basic/misc/bc30126.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30126
 ms.assetid: a522c39e-1f11-45c8-a00b-3546c842909a
-ms.openlocfilehash: 7242aef2bcbc59e18737ea691553cf76db0bace3
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a2b3a566254bec5c0aa7c7b0779366d41052549a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682911"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380250"
 ---
 # <a name="readonly-property-must-provide-a-get"></a>La proprietà 'ReadOnly' deve fornire un elemento 'Get'
 Se una proprietà viene dichiarata come `ReadOnly`, deve fornire una routine per la lettura del relativo valore.  
@@ -27,5 +27,5 @@ Se una proprietà viene dichiarata come `ReadOnly`, deve fornire una routine per
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Property](../../visual-basic/language-reference/statements/property-statement.md)
-- [Istruzione Get](../../visual-basic/language-reference/statements/get-statement.md)
+- [Property Statement](../language-reference/statements/property-statement.md)
+- [Istruzione Get](../language-reference/statements/get-statement.md)
