--- a/docs/visual-basic/misc/bc30235.md
+++ b/docs/visual-basic/misc/bc30235.md
@@ -1,5 +1,5 @@
 ---
-title: "'<specifier>' non è valido in una dichiarazione di variabile membro"
+title: "' <specifier> ' non valido in una dichiarazione di variabile membro"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30235
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30235
 ms.assetid: 8c5764e4-0096-4ca0-8656-05341a39833a
-ms.openlocfilehash: eee55835676119c002ab77eae8fcb6b25f08c095
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 6674eea9d6013d8946fc43a9cda4c6c45fcff2e8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62027901"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379926"
 ---
-# <a name="specifier-is-not-valid-on-a-member-variable-declaration"></a>'\<identificatore >' non è valido in una dichiarazione di variabile membro
+# <a name="specifier-is-not-valid-on-a-member-variable-declaration"></a>' \<specifier> ' non valido in una dichiarazione di variabile membro
 Un'istruzione `Dim` contiene una parola chiave non valida. Un'istruzione `Dim` può includere solo le parole chiave `Friend`, `Private`, `Protected`, `Public`, `ReadOnly`, `Shadows`, `Shared`o `Static` .  
   
  Questo messaggio può comparire anche se si dichiara una variabile `Static` all'esterno di una routine. Si può usare `Static` solo a livello di routine.  
@@ -31,4 +31,4 @@ Un'istruzione `Dim` contiene una parola chiave non valida. Un'istruzione `Dim` p
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
