--- a/docs/visual-basic/misc/bc30580.md
+++ b/docs/visual-basic/misc/bc30580.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30580
 ms.assetid: 56c6ef4b-28b1-4a62-8afa-d83a7742b507
-ms.openlocfilehash: 8aebc07a60159e5054ffb30597e31a6db9d841f4
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: b9fefb3ef992ce148ef554362ec4867c0e266eb9
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664912"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370063"
 ---
 # <a name="externalsource-directives-cannot-be-nested"></a>Le direttive di '#ExternalSource' non possono essere annidate
 Si è provato a posizionare una direttiva `#ExternalSource` all'interno di un altro blocco `#ExternalSource` . La direttiva `#ExternalSource` fa riferimento al codice esterno, permettendo al compilatore di segnalare con precisione le eccezioni che si verificano all'interno di tale codice.  
@@ -27,5 +27,5 @@ Si è provato a posizionare una direttiva `#ExternalSource` all'interno di un al
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Direttiva #ExternalSource](../../visual-basic/language-reference/directives/externalsource-directive.md)
+- [#ExternalSource (direttiva)](../language-reference/directives/externalsource-directive.md)
 - [Compilazione condizionale in Visual Basic](../programming-guide/program-structure/conditional-compilation.md)
