--- a/docs/visual-basic/misc/bc30584.md
+++ b/docs/visual-basic/misc/bc30584.md
@@ -1,5 +1,5 @@
 ---
-title: "'<type>' non può essere ereditato più di una volta"
+title: "' <type> ' non può essere ereditato più di una volta"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30584
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30584
 ms.assetid: c05261ad-5b0f-4fe8-a4e6-c76d8bc2b3ad
-ms.openlocfilehash: 19cae96d38cdaf2b4ddbd9c2529fcff8db4fccc4
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: be33337669345a9ad30861b2b949d112a1ef8e6c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620839"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369907"
 ---
-# <a name="type-cannot-be-inherited-more-than-once"></a>'\<tipo >' non può essere ereditato più di una volta
+# <a name="type-cannot-be-inherited-more-than-once"></a>' \<type> ' non può essere ereditato più di una volta
 Un'istruzione `Inherits` è stata duplicata.  
   
  **ID errore:** BC30584  
@@ -25,4 +25,4 @@ Un'istruzione `Inherits` è stata duplicata.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Inherits](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [Inherits Statement](../language-reference/statements/inherits-statement.md)
