--- a/docs/visual-basic/misc/bc30587.md
+++ b/docs/visual-basic/misc/bc30587.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30587
 ms.assetid: aff179af-96f2-4157-971e-881d8e08f5f2
-ms.openlocfilehash: 49df2c7a6a7a026ee7a15d74a2f5989fadcbbfbd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c835ac171894f76bc67cece9d4523cd94584e72b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64620358"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369881"
 ---
 # <a name="named-argument-cannot-match-a-paramarray-parameter"></a>L'argomento denominato non può corrispondere a un parametro ParamArray
 È stato fornito un argomento denominato, specificato con il nome dichiarato dell'argomento, seguito da due punti (:) e dal segno di uguale e quindi dal valore dell'argomento. Non è invece possibile passare una matrice di parametri per nome. Quando si chiama la routine, si fornisce un numero indefinito di argomenti delimitati da virgole per la matrice di parametri e il compilatore non può associare più argomenti con lo stesso nome.  
@@ -25,5 +25,5 @@ ms.locfileid: "64620358"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [ParamArray](../../visual-basic/language-reference/modifiers/paramarray.md)
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [ParamArray](../language-reference/modifiers/paramarray.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
