--- a/docs/visual-basic/misc/bc33040.md
+++ b/docs/visual-basic/misc/bc33040.md
@@ -1,5 +1,5 @@
 ---
-title: Tipi di parametro di '<operator>'deve essere'<typename>' da usare in un'istruzione 'For'
+title: I tipi di parametro di '<operator>' devono essere '<typename>' per poter essere usati in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - BC33040
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33040
 ms.assetid: bffbb812-0d69-47e4-96c5-01882722ccdb
-ms.openlocfilehash: 4a386ab9631729fc5b9ab8196c78ea03d33a54fc
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 5b49459d94868844b1c3cc5ac343d37b2ffc18a3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61761871"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379510"
 ---
-# <a name="parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a>Tipi di parametro di '\<operatore >' deve essere '\<nomeTipo >' da usare in un'istruzione 'For'
+# <a name="parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a>I tipi di parametro di '\<operator>' devono essere '\<typename>' per poter essere usati in un'istruzione 'For'
 Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `>=` o `<=` con i parametri del suo stesso tipo.  
   
  È necessario che la variabile contatore sia di un tipo che supporta operatori maggiori di o uguali a (`>=`) e meno di o uguali a (`<=`) che confrontano il loro tipo contenente. Ciò significa che entrambi gli operandi devono essere del tipo della variabile contatore.  
@@ -31,8 +31,8 @@ Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
