--- a/docs/visual-basic/misc/bc36008.md
+++ b/docs/visual-basic/misc/bc36008.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36008
 ms.assetid: 83269108-b169-40a6-bbcc-af1ac8fcfd67
-ms.openlocfilehash: 432e4f9071239f175d5d2641d4508b8c4f4081b1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: c06c644dbc2cf64e1f01418eb0421966290186c4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61770058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379108"
 ---
 # <a name="using-must-end-with-a-matching-end-using"></a>'Using' deve terminare con un oggetto 'End Using' corrispondente
 Un'istruzione `Using` si verifica senza un'istruzione `End Using` corrispondente.  
@@ -29,5 +29,5 @@ Un'istruzione `Using` si verifica senza un'istruzione `End Using` corrispondente
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Using](../../visual-basic/language-reference/statements/using-statement.md)
-- [Procedura: Eliminare una risorsa di sistema](../../visual-basic/programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
+- [Istruzione using](../language-reference/statements/using-statement.md)
+- [Procedura: eliminare una risorsa di sistema](../programming-guide/language-features/control-flow/how-to-dispose-of-a-system-resource.md)
