--- a/docs/visual-basic/misc/bc36533.md
+++ b/docs/visual-basic/misc/bc36533.md
@@ -1,5 +1,5 @@
 ---
-title: Parametro 'ByRef' <parametername> non può essere utilizzato in un'espressione di query
+title: Impossibile usare il parametro 'ByRef' '<parametername>' in un'espressione di query
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36533
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36533
 ms.assetid: 8067ac87-dd6b-4869-87d0-8a4ce272de41
-ms.openlocfilehash: ae1f389a1e24b0b8518bac31b868751d9ff57ec1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3f1e1c238489c035673eb0fb8487edf9eb5504e3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62052066"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378803"
 ---
-# <a name="byref-parameter-parametername-cannot-be-used-in-a-query-expression"></a>Parametro 'ByRef' \<parametername > non può essere utilizzato in un'espressione di query
+# <a name="byref-parameter-parametername-cannot-be-used-in-a-query-expression"></a>Impossibile usare il parametro 'ByRef' '\<parametername>' in un'espressione di query
 Un parametro incluso in una query LINQ è un tipo puntatore. I parametri usati nelle espressioni di query non possono essere passati mediante riferimento.  
   
  **ID errore:** BC36533  
@@ -38,6 +38,6 @@ End Sub
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Differenze tra il passaggio di un argomento per valore e per riferimento](../../visual-basic/programming-guide/language-features/procedures/differences-between-passing-an-argument-by-value-and-by-reference.md)
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [Differenze tra il passaggio di un argomento per valore e per riferimento](../programming-guide/language-features/procedures/differences-between-passing-an-argument-by-value-and-by-reference.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
