--- a/docs/visual-basic/misc/bc36535.md
+++ b/docs/visual-basic/misc/bc36535.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36535
 ms.assetid: afb5281b-70a7-48c7-a46d-39522b96b1ff
-ms.openlocfilehash: 4cb0080dc28799dbaab508aade3b44f0d925bda6
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 2e9960d934834e8ccadff39cfebacb8fdd8859cb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666887"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378913"
 ---
 # <a name="instance-members-and-me-cannot-be-used-in-a-query-expression"></a>Non è possibile usare membri di istanza e 'Me' in un'espressione di query
 Una query LINQ in una `Structure` include un riferimento a `Me` o a un membro di istanza della struttura. I riferimenti a `Me` o i membri di istanza non sono consentiti nelle espressioni di query all'interno di una `Structure`.  
@@ -42,7 +42,7 @@ End Structure
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Introduzione a LINQ in Visual Basic](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [LINQ](../../visual-basic/programming-guide/language-features/linq/index.md)
-- [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
-- [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)
+- [Introduzione a LINQ in Visual Basic](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [LINQ](../programming-guide/language-features/linq/index.md)
+- [Me stesso](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me)
+- [Structure (Visual Basic)](../language-reference/statements/structure-statement.md)
