--- a/docs/visual-basic/misc/bc36558.md
+++ b/docs/visual-basic/misc/bc36558.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36558
 ms.assetid: f47d310a-95fd-4340-bda2-21262c217dbb
-ms.openlocfilehash: 6c9227a876d95b68cf9f86327285cb7770ae9063
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: adc7bd9f0d773c996a892371b7c2f69014e0622b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69666877"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378354"
 ---
 # <a name="the-custom-designed-version-of-systemruntimecompilerservicesextensionattribute-found-by-the-compiler-is-not-valid"></a>La versione personalizzata di 'System.Runtime.CompilerServices.ExtensionAttribute' trovata dal compilatore non è valida
 
@@ -65,6 +65,6 @@ End Namespace
 - <xref:System.Runtime.CompilerServices.ExtensionAttribute>
 
 - [Creazione di attributi personalizzati](../programming-guide/concepts/attributes/creating-custom-attributes.md)
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
 - [Panoramica degli attributi](../programming-guide/concepts/attributes/index.md)
 - [Scrittura di attributi personalizzati](../../standard/attributes/writing-custom-attributes.md)
