--- a/docs/visual-basic/misc/bc36561.md
+++ b/docs/visual-basic/misc/bc36561.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo di estensione ' <methodname>' presenta vincoli di tipo che non possono mai essere soddisfatti
+title: I vincoli di tipo del metodo di estensione '<methodname>' non possono mai essere soddisfatti
 ms.date: 07/20/2015
 f1_keywords:
 - bc36561
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36561
 ms.assetid: ff42d6e9-611b-407d-a269-f268b36ed277
-ms.openlocfilehash: d98203f6fa1a6f9ac6d05c7cba7586f3fdf5ebde
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 0c7964f96850f755032add91be83b85fd9c0bf6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71396414"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378211"
 ---
-# <a name="extension-method-methodname-has-type-constraints-that-can-never-be-satisfied"></a>Il metodo di estensione ' \<methodname >' presenta vincoli di tipo che non possono mai essere soddisfatti
+# <a name="extension-method-methodname-has-type-constraints-that-can-never-be-satisfied"></a>I vincoli di tipo del metodo di estensione '\<methodname>' non possono mai essere soddisfatti
 I parametri di tipo di questo metodo interagiscono in modo da impedire che vengano soddisfatti. Di seguito viene riportato un esempio di metodo di estensione.  
   
 ```vb  
@@ -42,5 +42,5 @@ I parametri di tipo di questo metodo interagiscono in modo da impedire che venga
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
