--- a/docs/visual-basic/misc/bc36568.md
+++ b/docs/visual-basic/misc/bc36568.md
@@ -1,5 +1,5 @@
 ---
-title: "'<elementname>' non è un parametro di metodo"
+title: "' <elementname> ' non è un parametro di metodo"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36568
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36568
 ms.assetid: 3b40142f-b66f-4788-b156-cb97dfed45ee
-ms.openlocfilehash: 3acc2db08e1b88bc283972381ddf892234e49681
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 65c5629c8bcae5ca1edf197b40f03f892eae7839
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621544"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378016"
 ---
-# <a name="elementname-is-not-a-method-parameter"></a>'\<NomeElemento >' non è un parametro di metodo
+# <a name="elementname-is-not-a-method-parameter"></a>' \<elementname> ' non è un parametro di metodo
 Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo.  
   
  **ID errore:** BC36568  
@@ -25,4 +25,4 @@ Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
