--- a/docs/visual-basic/misc/bc36569.md
+++ b/docs/visual-basic/misc/bc36569.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento non specificato per il parametro '<parametername>'
+title: Argomento non specificato per il parametro ' <parametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36569
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36569
 ms.assetid: f37d5bcd-93c7-435f-ac51-978a87371316
-ms.openlocfilehash: 6bb9d0980feb7aa51b2da536d31bcf19af33ad6e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0b0d8876da3dbd8856e20d6143ad6512e9a36c6a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621516"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377978"
 ---
-# <a name="argument-not-specified-for-parameter-parametername"></a>Argomento non specificato per il parametro '\<nomeparametro >'
+# <a name="argument-not-specified-for-parameter-parametername"></a>Argomento non specificato per il parametro ' \<parametername> '
 Non è stato fornito un argomento per un parametro obbligatorio.  
   
  **ID errore:** BC36569  
@@ -25,4 +25,4 @@ Non è stato fornito un argomento per un parametro obbligatorio.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Risoluzione dei problemi relativi alle routine](../../visual-basic/programming-guide/language-features/procedures/troubleshooting-procedures.md)
+- [Risoluzione dei problemi relativi alle routine](../programming-guide/language-features/procedures/troubleshooting-procedures.md)
