--- a/docs/visual-basic/misc/bc36580.md
+++ b/docs/visual-basic/misc/bc36580.md
@@ -1,5 +1,5 @@
 ---
-title: Metodo di estensione '<methodName>'definito '<typeName>'non ha la stessa firma del delegato'<delegateName>'
+title: Il metodo di estensione ' <methodName> ' definito in ' <typeName> ' non ha la stessa firma del delegato ' <delegateName> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36580
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36580
 ms.assetid: dc6b6a63-02b0-43d8-b6a7-c1cd397c6ee3
-ms.openlocfilehash: 2fa4f9ea944d062de315470f235cd6187c39a441
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ddf1854f3df06c02f5b1d28f67cb10105a8d8b73
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64623428"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377548"
 ---
-# <a name="extension-method-methodname-defined-in-typename-does-not-have-the-same-signature-as-delegate-delegatename"></a>Metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >' non ha la stessa firma del delegato '\<NomeDelegato >'
+# <a name="extension-method-methodname-defined-in-typename-does-not-have-the-same-signature-as-delegate-delegatename"></a>Il metodo di estensione ' \<methodName> ' definito in ' \<typeName> ' non ha la stessa firma del delegato ' \<delegateName> '
 Le firme del metodo di estensione e il delegato che si sta provando a usare non corrispondono. L'istruzione `Delegate` definisce i tipi di parametro e i tipi restituiti di una classe delegata. Qualsiasi routine con parametri, tipi e tipi restituiti corrispondenti può essere usata per creare un'istanza di questo tipo di delegato. Nell'esempio seguente viene segnalato questo errore perché la firma del metodo di estensione `Example` non è compatibile con la firma del delegato `Del`.  
   
 ```vb  
@@ -47,6 +47,6 @@ End Sub
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Istruzione Delegate](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [Conversione di tipo relaxed del delegato](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Istruzione Delegate](../language-reference/statements/delegate-statement.md)
+- [Conversione di tipo relaxed del delegato](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
