--- a/docs/visual-basic/misc/bc36583.md
+++ b/docs/visual-basic/misc/bc36583.md
@@ -1,5 +1,5 @@
 ---
-title: Il parametro ' <parametername>' nel metodo di estensione ' <methodname>' definito in ' <typename>' ha già un argomento omesso corrispondente
+title: Il parametro '<parametername>' del metodo di estensione '<methodname>' definito in '<typename>' ha già un argomento omesso corrispondente
 ms.date: 07/20/2015
 f1_keywords:
 - bc36583
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36583
 ms.assetid: 662072fa-abb8-43c3-8ca2-aefb20f2e902
-ms.openlocfilehash: da1aceafd4be0546b23ed1daed2a139ef5287756
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 0b6fb2302e7e92387d346d81a68a3e97c264d828
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71396322"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377457"
 ---
-# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-omitted-argument"></a>Il parametro ' \<parametername >' nel metodo di estensione ' \<methodname >' definito in ' \<typename >' ha già un argomento omesso corrispondente
+# <a name="parameter-parametername-in-extension-method-methodname-defined-in-typename-already-has-a-matching-omitted-argument"></a>Il parametro '\<parametername>' del metodo di estensione '\<methodname>' definito in '\<typename>' ha già un argomento omesso corrispondente
 Una chiamata di routine a un metodo di estensione omette un argomento in base alla posizione e quindi specifica l'argomento per nome. Ad esempio, la seguente chiamata al metodo di estensione `ABC` prima omette un argomento per il parametro `Y`e quindi lo fornisce per nome.  
   
 ```vb  
@@ -37,5 +37,5 @@ Dim number As Integer
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi di estensione](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [Passaggio di argomenti in base alla posizione e al nome](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [Metodi di estensione](../programming-guide/language-features/procedures/extension-methods.md)
+- [Passaggio di argomenti in base alla posizione e al nome](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
