--- a/docs/visual-basic/misc/bc36909.md
+++ b/docs/visual-basic/misc/bc36909.md
@@ -1,5 +1,5 @@
 ---
-title: Non è possibile dedurre un tipo<variablename>di dati per '' perché le dimensioni della matrice non corrispondono
+title: Impossibile dedurre un tipo di dati per '<variablename>' perché le dimensioni di matrice non corrispondono
 ms.date: 07/20/2015
 f1_keywords:
 - bc36909
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36909
 ms.assetid: e41fec81-efec-4395-a0a5-d81906a2d4f1
-ms.openlocfilehash: be6604e8ce6288ff001ea8b925c6a31e00d26d7d
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8b485c3ef5fa8cf8d4fe4f0b0b3dd61402dedfd6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660321"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84369284"
 ---
-# <a name="cannot-infer-a-data-type-for-variablename-because-the-array-dimensions-do-not-match"></a>Non è possibile dedurre un tipo\<di dati per ' variablename >' perché le dimensioni della matrice non corrispondono
+# <a name="cannot-infer-a-data-type-for-variablename-because-the-array-dimensions-do-not-match"></a>Impossibile dedurre un tipo di dati per '\<variablename>' perché le dimensioni di matrice non corrispondono
 Se le dimensioni usate per inizializzare una matrice non corrispondono alle dimensioni nella dichiarazione, il compilatore non può dedurre un tipo di dati per la matrice. Il codice seguente, ad esempio, causa questo errore.  
   
 ```vb  
@@ -29,5 +29,5 @@ Dim exampleArray1() = New Integer() {1, 2, 3}
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Inferenza del tipo di variabile locale](../../visual-basic/programming-guide/language-features/variables/local-type-inference.md)
+- [Inferenza del tipo di variabile locale](../programming-guide/language-features/variables/local-type-inference.md)
 - [Dimensioni della matrice in Visual Basic](../programming-guide/language-features/arrays/array-dimensions.md)
